[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/voxilent.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UpgradesScene/upgradesTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Resources/img_gear.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UpgradesScene/objLockedTab.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="objLockedTab" type="Tabs"]
margin_right = 976.0
margin_bottom = 330.0
rect_min_size = Vector2( 976, 300 )
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctnVBox1" type="VBoxContainer" parent="ctnHBox"]
margin_right = 189.0
margin_bottom = 330.0

[node name="labProcName" type="Label" parent="ctnHBox/ctnVBox1"]
margin_right = 189.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Gear:"

[node name="labDescription" type="Label" parent="ctnHBox/ctnVBox1"]
margin_top = 36.0
margin_right = 189.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = "Unlock processing Gears"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ctnHBox/ctnVBox1"]
margin_top = 126.0
margin_right = 189.0
margin_bottom = 136.0

[node name="labCost" type="Label" parent="ctnHBox/ctnVBox1"]
margin_top = 140.0
margin_right = 189.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 3 )
text = "Unlock Cost:"

[node name="texEntity" type="TextureRect" parent="ctnHBox"]
margin_left = 193.0
margin_right = 582.0
margin_bottom = 330.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 6

[node name="ctnUpgProgress" type="VBoxContainer" parent="ctnHBox"]
margin_left = 586.0
margin_right = 976.0
margin_bottom = 330.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
alignment = 1

[node name="labProgress" type="Label" parent="ctnHBox/ctnUpgProgress"]
margin_right = 390.0
margin_bottom = 135.0
size_flags_vertical = 3
text = "Progress:"
valign = 2

[node name="prgBar" type="ProgressBar" parent="ctnHBox/ctnUpgProgress"]
margin_top = 139.0
margin_right = 390.0
margin_bottom = 190.0
size_flags_vertical = 1

[node name="btnUpg" type="Button" parent="ctnHBox/ctnUpgProgress"]
margin_top = 194.0
margin_right = 390.0
margin_bottom = 330.0
size_flags_vertical = 3
text = "UPG"
[connection signal="pressed" from="ctnHBox/ctnUpgProgress/btnUpg" to="." method="_on_btnUpg_pressed"]
